--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <link rel="icon" type="image/x-icon" href="./src/images/favicon.ico">
 
     <title>Game Center</title>
+
+    <meta name="description"
+      content="Game Center">
+    <meta property="og:url" content="https://pacgc.pw">
+    <meta property="og:title" content="Game Center">
+    <meta property="og:description"
+      content="Game Center">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://pacgc.pw/src/images/favicon.ico">
+
+   <!--<meta name="twitter:card" content="summary_large_image"/>--> 
+
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>test.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
