--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./src/images/favicon.ico">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="./src/images/favicon.ico">
 
-    <title>Game Center</title>
+  <title>Game Center</title>
 
-    <meta name="description"
-      content="Game Center">
-    <meta property="og:url" content="https://pacgc.pw">
-    <meta property="og:title" content="Game Center">
-    <meta property="og:description"
-      content="Game Center">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://pacgc.pw/src/images/favicon.ico">
+  <meta name="description" content="Game Center">
+  <meta property="og:url" content="https://pacgc.pw">
+  <meta property="og:title" content="PAC Game Center">
+  <meta property="og:description"
+    content="Your hub for Play-to-Earn excitement with weekly tournaments and esports events. Сompete for rewards, and join a vibrant PAC gaming community.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://pacgc.pw/src/images/logo-game-center.png">
 
-   <!--<meta name="twitter:card" content="summary_large_image"/>--> 
+  <!--<meta name="twitter:card" content="summary_large_image"/>-->
 
-  </head>
-  <body>
-    <noscript>test.</noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+
+<body>
+  <noscript>Your hub for Play-to-Earn excitement with weekly tournaments and esports events. Сompete for rewards, and
+    join a vibrant PAC gaming community.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
-
